[package]
name = "soehnle-t3005"
version = "0.1.0"
authors = ["Markus Kohlhase <markus.kohlhase@slowtec.de>"]
license = "MIT/Apache-2.0"
description = "SOEHNLE Terminal 3005 library"
homepage = "https://github.com/slowtec/soehnle-t3005"
repository = "https://github.com/slowtec/soehnle-t3005"
edition = "2021"
rust-version = "1.79"

[dependencies]
thiserror = "1.0"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_const_for_fn = "warn"

# The error types returned should be self-explanatory.
missing_errors_doc = "allow"
